fixed updates alignment

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,10 @@ h3 {
 	font-size: 1.4em;
 	margin: 15px 0;
 }
-
+h4 {
+	font-size: 1.1em;
+	margin: 15px 0;
+}
 img {
 	max-width: 100%;
 	height: auto;
